# computerVisionSamples

./: CMakeLists.txt  README.md
01_displayPicture/src/: .displayPicture.cpp.swp  .videoPlayer.cpp.swp  CMakeLists.txt  displayPicture.cpp
02_videoPlayer/src/: videoPlayer.cpp
03_smoothingPicture/src/: CMakeLists.txt  smoothingPicture.cpp
04_pyrUpAndDown/src/: CMakeLists.txt  pyrUpAndDown.cpp
05_cannyPicture/src/: CMakeLists.txt  cannyPicture.cpp
06_writeAVIFile/src/: CMakeLists.txt  writeAVIFile.cpp
07_faceRecognition/src/: CMakeLists.txt  faceRecognition.cpp
videoPlayer/src/: .videoPlayer.cpp.swp  CMakeLists.txt  videoPlayer.cpp
